# bakery-cxx

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  sconstruct
doc/: Doxyfile  api.rst  arrays.rst  conf.py  default_values.rst  getting_started.rst  index.rst  optional_values.rst  serialization.rst  standard_types.rst  structures.rst  tutorial.rst  types.rst  variants.rst
doc/_static/: custom_theme.css
src/: assertions.cpp  assertions.hpp  bakery.cpp  bakery.hpp  boost_math_serializers.hpp  compilation_log.cpp  compilation_log.hpp  compilation_message.cpp  compilation_message.hpp  compiler.cpp  compiler.hpp  continuous_wrapper.hpp  definition_indication.hpp  definition_or_data.cpp  definition_or_data.hpp  enable_phoenix_v3.hpp  error_code.cpp  error_code.hpp  file_indication.cpp  file_indication.hpp  input.cpp  input.hpp  io.cpp  io.hpp  log.cpp  log.hpp  log_message.cpp  log_message.hpp  mpl_sequence_visitation.hpp  output.cpp  output.hpp  parser.cpp  parser.hpp  recipe_indication.hpp  recipe_or_data.cpp  recipe_or_data.hpp  serializers.hpp  str.cpp  str.hpp  test_bakery.cpp  (+11 more)
src/dat/: data.cpp  data.hpp  floating.cpp  floating.hpp  node.cpp  node.hpp  test_floating.cpp
src/def/: array_data.cpp  array_data.hpp  definition.cpp  definition.hpp  enum_value_data.cpp  enum_value_data.hpp  member_data.cpp  member_data.hpp  native_data.cpp  native_data.hpp  node.cpp  node.hpp  path.cpp  path.hpp  recipe.cpp  recipe.hpp  structure_data.cpp  structure_data.hpp  type_instanciation.cpp  (+5 more)
tests/: inheritance.rec  int_string.rec  optional.rec  types.rec  variants.rec
(+80 files in other folders)
